# CS4

./: .gitignore  dune
PS1/: lab1.ml  lab1.mli
PS2/: Makefile  dune  lab2.ml  tests_lab2  tests_lab2.ml
PS3/: Makefile  dune  lab3.ml  lab3.mli  tests_lab3 10  tests_lab3 13  tests_lab3 2  tests_lab3 3  tests_lab3 6  tests_lab3 7  tests_lab3 8  tests_lab3.ml
PS4/: dune  lab4.ml
PS5/: dune  lab5.ml  lab5.mli  tests_lab5  tests_lab5.ml
PS6/: dune  lab6.ml  lab6.mli  tests_lab6  tests_lab6.ml
PS7/: .gitignore  Makefile  dune  gsearch.ml  gsearch.mli  klotski.ml  klotski.mli  klotski_interact.ml  klotski_solve.ml  klotski_tests  klotski_tests.ml  utop_init
final/: Makefile  board.ml  dune  interact.ml  knights_tour  knights_tour.ml  search.ml  search.mli  storage.ml  test_board  test_board.ml  test_search  test_search.ml  test_storage  test_storage.ml  utils.ml
midterm/: dune  midterm.ml  midterm.mli  tests_midterm  tests_midterm.ml
